# sufdo

./: CHANGELOG.md  DEVELOPMENT_PLAN.md  README.md  TODO.md  commit_schedule.json  commit_scheduler.py  pyproject.toml  run_scheduler.bat  sufdo.py
features/: day1_silent_verbose.md  day2_safety.md
sufdo/: __init__.py  __main__.py  ai.py  aliases.py  config.py  execution.py  fun_modes.py  notifications.py  safety.py  stats.py  utils.py
sufdo/commands/: __init__.py  ai_commands.py  alias_commands.py  config_commands.py  notify_commands.py  safety_commands.py  stats_commands.py
sufdo/tests/: __init__.py  test_commands.py  test_sufdo.py
