[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sufdo"
version = "4.2.0"
description = "Super User Fkin Do - Execute commands with elevated privileges"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Arseniy1002"}
]
keywords = ["sudo", "cli", "terminal", "command"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Shells",
    "Topic :: Utilities",
]

[project.scripts]
sufdo = "sufdo:main"

[project.urls]
Homepage = "https://github.com/Arseniy1002/sufdo"
Repository = "https://github.com/Arseniy1002/sufdo.git"

[tool.setuptools.packages.find]
include = ["sufdo*"]
